# BamBam

./: CMakeLists.txt  README.md
inc/: Analysis.h  Analyzer.h  BamRead.h  BamReader.h  Base.h  Exporter.h  FastaReader.h  Sequence.h  Transcript.h  filesystem.h
src/: Analysis.cpp  Analyzer.cpp  BamRead.cpp  BamReader.cpp  Base.cpp  Exporter.cpp  FastaReader.cpp  Sequence.cpp  Transcript.cpp  main.cpp
